# msp

./: CMakeLists.txt  README.md  complex.c  complex.h  main.c  matrix.c  matrix.h  vector.c  vector.h
doc/: doc.html
msp_include/: CMakeLists.txt
msp_include/msp_complex/: CMakeLists.txt  msp_complex.c  msp_complex.h
msp_include/msp_data/: CMakeLists.txt  msp_data.c  msp_data.h  msp_tab_matrix.c  msp_tab_matrix.h  msp_tab_matrix_complex.c  msp_tab_matrix_complex.h  msp_tab_vector.c  msp_tab_vector.h  msp_tab_vector_complex.c  msp_tab_vector_complex.h
msp_include/msp_interface/: CMakeLists.txt  msp_command.c  msp_command.h  msp_interface.c  msp_interface.h
msp_include/msp_logger/: CMakeLists.txt  msp_log.c  msp_log.h
msp_include/msp_matrix/: CMakeLists.txt  msp_matrix.c  msp_matrix.h  msp_matrix_complex.c  msp_matrix_complex.h
msp_include/msp_poly/: CMakeLists.txt  msp_poly.c  msp_poly.h
msp_include/msp_vector/: CMakeLists.txt  msp_vector.c  msp_vector.h  msp_vector_complex.c  msp_vector_complex.h
